Updated for Folio Q4 module releases
Also updated corresponding environment variables and Docker commands for each module.